# browser-use-histia

./: .gitignore  notes.html  pyproject.toml
browser_use/agent/: views.py
browser_use/browser/: events.py
browser_use/browser/watchdogs/: dom_watchdog.py
browser_use/llm/openai/: chat.py
browser_use/tools/: service.py
examples/: smart_screenshot_agent.py  test_direct_httpx.py  test_simple_llm.py
examples/histia/: README.md  __init__.py  appsumo_hot_extractor.py  appsumo_new_extractor.py  betalist_extractor.py  deeptech_companies_agent.py  fastapi_agents.py  futuretools_extractor.py  product_hunt_leaderboard_agent.py  product_research_agent.py  startup_listing_agent.py  stationf_companies_agent.py  universal_startup_extractor.py  zone_secure_startups_agent.py
examples/use-cases/: product_research_agent.py
mcp_lib/: __init__.py  pyproject.toml
mcp_lib/agent/: __init__.py
mcp_lib/schemas/: __init__.py
tests/examples/histia/: test_betalist_extractor.py  test_universal_startup_extractor.py  test_usage_summary.py
