[project]
name = "mcp-lib"
version = "0.1.0"
description = "Stub package for mcp_lib - Histia MCP library wrapper"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.11.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcp_lib"]

